--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.12.2",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "npm": "^6.9.0",
     "p-min-delay": "^2.0.0",
     "react": "^16.8.4",
