--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./dist && webpack --config config/webpack.prod.config.js",
-    "build-dev": "rm -rf ./dist && webpack --config config/webpack.dev.js",
+    "build-dev": "rm -rf ./dist && webpack --config config/webpack.dev.config.js",
     "start": "webpack-dev-server --config config/webpack.dev.config.js"
   },
   "keywords": [
